package behavioral.observer.NhanVat;

public interface PlayerDataListener {
    public void listen(PlayerData data);
}
