@startuml
'https://plantuml.com/class-diagram

interface PlayerDataListener{
    + void listen(PlayerData data)
}

class PlayerData{
    - PlayerDataListener listener;
    - int thoiGian, soLuotChoi, diemSo
    + void dangKy(PlayerDataListener listener)
    + void huyDangKy(PlayerDataListener listener)
    + void setThoiGian(int thoiGian)
    + void setDiemSo(int diemSo)
    + void setSoLuotChoi(int soLuotChoi)
}

class Dashboard{}

PlayerData-->PlayerDataListener:listener
PlayerDataListener<|.. Dashboard
PlayerData <-- Dashboard:playerData

@enduml